--- a/package.json
+++ b/package.json
@@ -51,21 +51,21 @@
     "start": "node bin/capiscio.js"
   },
   "dependencies": {
-    "commander": "^11.1.0",
     "chalk": "^5.3.0",
-    "ora": "^7.0.1",
+    "commander": "^11.1.0",
+    "glob": "^10.3.10",
     "inquirer": "^9.2.12",
-    "glob": "^10.3.10"
+    "ora": "^7.0.1"
   },
   "devDependencies": {
-    "@types/node": "^20.8.0",
     "@types/inquirer": "^9.0.3",
-    "@typescript-eslint/eslint-plugin": "^6.7.4",
-    "@typescript-eslint/parser": "^6.7.4",
-    "eslint": "^8.50.0",
-    "tsup": "^7.2.0",
+    "@types/node": "^20.8.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "@vitest/coverage-v8": "^3.2.4",
+    "eslint": "^8.57.1",
+    "tsup": "^8.5.0",
     "typescript": "^5.2.2",
-    "vitest": "^0.34.6",
-    "@vitest/coverage-v8": "^0.34.6"
+    "vitest": "^3.2.4"
   }
 }
