--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,4 +62,4 @@ jobs:
       run: npm ci
       
     - name: Run security audit
-      run: npm audit --audit-level moderate
+      run: npm audit --audit-level moderate --omit=dev
