--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,23 +30,11 @@ jobs:
     - name: Run linting
       run: npm run lint
       
+    - name: Run typecheck
+      run: npm run typecheck
+      
     - name: Run tests
       run: npm test
-      
-    - name: Build CLI
-      run: npm run build
-      
-    - name: Test CLI functionality
-      run: |
-        # Test basic CLI functionality
-        node dist/cli.js --version
-        node dist/cli.js --help
-        
-        # Test validation with fixtures
-        node dist/cli.js validate tests/fixtures/valid-agents/basic-agent.json --schema-only
-        
-        # Test JSON output
-        node dist/cli.js validate tests/fixtures/valid-agents/basic-agent.json --schema-only --json | jq .
 
   build:
     runs-on: ubuntu-latest
@@ -56,7 +44,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
       
-    - name: Setup Node.js
+    - name: Setup Node.js 20.x
       uses: actions/setup-node@v4
       with:
         node-version: '20.x'
@@ -65,14 +53,26 @@ jobs:
     - name: Install dependencies
       run: npm ci
       
-    - name: Build for production
+    - name: Build CLI
       run: npm run build
       
-    - name: Upload build artifacts
-      uses: actions/upload-artifact@v4
+    - name: Test CLI basic functionality (Node.js 20.x)
+      run: |
+        # Test basic CLI functionality
+        node dist/cli.js --version
+        node dist/cli.js --help
+        
+    - name: Test CLI with Node.js 18.x
+      uses: actions/setup-node@v4
       with:
-        name: cli-build
-        path: dist/
+        node-version: '18.x'
+        cache: 'npm'
+        
+    - name: Test CLI basic functionality (Node.js 18.x)
+      run: |
+        # Test basic CLI functionality on Node.js 18.x
+        node dist/cli.js --version
+        node dist/cli.js --help
 
   security:
     runs-on: ubuntu-latest
@@ -91,7 +91,4 @@ jobs:
       run: npm ci
       
     - name: Run security audit
-      run: npm audit --audit-level moderate
-      
-    - name: Check for vulnerabilities
-      run: npm audit --audit-level high
+      run: npm audit --audit-level moderate --omit=dev
