--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "scripts": {
     "build": "tsup",
+    "build:binaries": "node scripts/build-binaries.js",
     "dev": "tsup --watch",
     "test": "npm run test:unit",
     "test:unit": "vitest run src/__tests__",
@@ -64,10 +65,13 @@
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitest/coverage-v8": "^1.6.0",
+    "@yao-pkg/pkg": "^6.7.0",
+    "esbuild": "^0.25.10",
     "eslint": "^8.57.1",
+    "nexe": "^4.0.0-rc.6",
     "tsup": "^8.5.0",
     "typescript": "^5.2.2",
-    "vite": "^5.4.8",
+    "vite": "^5.4.20",
     "vitest": "^1.6.0"
   }
 }
