--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -147,4 +147,9 @@ jobs:
       run: npm ci
       
     - name: Run security audit
-      run: npm audit --audit-level moderate --omit=dev
+      run: |
+        # Check production dependencies (block high/critical only)
+        npm audit --audit-level high --omit=dev
+        
+        # Check dev dependencies (block high/critical only)
+        npm audit --audit-level high --include=dev
